# disaster-response-pipeline-project

./: .gitignore  README.md  pyproject.toml
app/: run.py
app/templates/: go.html  master.html
data/: process_data.py
models/: model_results.json  train_classifier.py
scratch/notebooks/: ETL_Pipeline_Preparation.ipynb  ML_Pipeline_Preparation.ipynb  ada_gridsearchcv_results.json  ada_model_results.json  dtc_model_gridsearchcv_results.json  dtc_model_results.json  explore_data.ipynb  gboost_model_results.json  rfc_gridsearchcv_results.json
