[tool.poetry]
name = "disaster_response_pipeline_project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.1"
numpy = "^1.21.1"
scikit-learn = "^0.24.2"
nltk = "^3.6.2"
SQLAlchemy = "^1.4.22"
black = "^21.7b0"
mypy = "^0.910"
dvc = "^2.5.4"
jupyterlab = "^3.1.0"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
