[tool.poetry]
name = "disaster_response_pipeline_project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.9.1"
pandas = "^1.3.1"
numpy = "^1.21.1"
scikit-learn = "^0.24.2"
nltk = "^3.6.2"
SQLAlchemy = "^1.4.22"
plotly = "^5.1.0"
Flask = "^2.0.1"
joblib = "^1.0.1"

jupyterlab = { version = "^3.1.0", optional = true }
dvc = { version = "^2.5.4", optional = true }
black = { version = "^21.7b0", optional = true }
mypy = { version = "^0.910", optional = true }

[tool.poetry.dev-dependencies]

[tool.poetry.extras]
notebook = ["jupyterlab"]
dataverctrl = ["dvc"]
formatter = ["black"]
linter = ["mypy"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
